--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,70 @@
+// ================================= GENERAL =================================
+
 body{
-    background-color: blue;
+    font-family: 'Courier New', Courier, monospace;
+    background-color: rgb(107, 180, 107);
+    color: brown;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+}
+
+.main-header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 50px;
+}
+
+// ================================= LEAGUES CONTAINER =================================
+
+.tab-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+}
+
+.tab-button{
+    padding: 20px;
+    border-radius: 30px;
+    background-color:  rgb(81, 148, 81);
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border: none;
+    color: brown;
+}
+
+.tab-button:hover{
+    background-color: rgb(90, 150, 90);
+    transform: translateY(-5px);
+}
+
+
+// ================================= TEAMS CONTAINER =================================
+
+.teams-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+}
+
+img{
+    width: 200px;
+    height: 200px;
+}
+
+.which-league-selected-message{
+    padding: 20px;
+    font-weight: bold;
 }
